<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    app:layoutDescription="@xml/motion_scene_animeinfo">

    <com.ms.square.android.expandabletextview.ExpandableTextView xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
        android:id="@+id/animeInfoSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animeInfoRoot"
        expandableTextView:animDuration="200"
        expandableTextView:maxCollapsedLines="2">

        <TextView
            android:id="@id/expandable_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/plot_summary"
            tools:text="En un mundo..." />

        <ImageButton
            android:id="@id/expand_collapse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/expand_text"
            android:visibility="invisible" />
    </com.ms.square.android.expandabletextview.ExpandableTextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/animeInfoRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topView">

        <androidx.cardview.widget.CardView
            android:id="@+id/animeCardView"
            android:layout_width="128dp"
            android:layout_height="210dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/animeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/animeInfoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/anime_info_item_start_margin"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:maxLines="2"
            android:textColor="@color/info_anime_title"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/typeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/animeCardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Boku No Hero Academia" />

        <LinearLayout
            android:id="@+id/typeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/anime_info_item_start_margin"
            android:layout_marginBottom="@dimen/anime_info_item_spacing"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/statusLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/animeCardView"
            app:layout_constraintTop_toBottomOf="@+id/animeInfoTitle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/type"
                android:theme="@style/type_title" />

            <TextView
                android:id="@+id/animeInfoType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/type_value"
                tools:text="TV Series" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/statusLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/anime_info_item_start_margin"
            android:layout_marginBottom="@dimen/anime_info_item_spacing"
            android:orientation="horizontal"

            app:layout_constraintBottom_toTopOf="@+id/nextEpisodeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/animeCardView"
            app:layout_constraintTop_toBottomOf="@+id/typeLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/status"
                android:theme="@style/type_title" />

            <TextView
                android:id="@+id/animeInfoStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/type_value"
                tools:text="En emisión" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nextEpisodeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/anime_info_item_start_margin"
            android:layout_marginBottom="@dimen/anime_info_item_spacing"
            android:orientation="horizontal"

            app:layout_constraintBottom_toTopOf="@+id/releasedLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/animeCardView"
            app:layout_constraintTop_toBottomOf="@+id/statusLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/nextepisode"
                android:theme="@style/type_title" />

            <TextView
                android:id="@+id/animeInfoNextEpisode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/type_value"
                tools:text="2020-04-23" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/releasedLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/anime_info_item_start_margin"
            android:layout_marginBottom="@dimen/anime_info_item_spacing"
            android:orientation="horizontal"

            app:layout_constraintBottom_toTopOf="@+id/flowLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/animeCardView"
            app:layout_constraintTop_toBottomOf="@+id/nextEpisodeLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/rating"
                android:theme="@style/type_title" />

            <TextView
                android:id="@+id/animeInfoReleased"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/type_value"
                tools:text="4.5 de 5" />
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/flowLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            app:chipSpacingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/animeCardView"
            app:layout_constraintTop_toBottomOf="@+id/releasedLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/animeInfoRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animeInfoSummary"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/noEpisodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_available"
        android:textColor="@color/episode_text"
        android:textSize="24sp"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/appBackground"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="10dp">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:src="@drawable/ic_arrow"
                android:tint="@color/info_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/favourite"
                android:layout_width="30dp"

                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:src="@drawable/ic_unfavorite"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/animeInfoRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topView" />

</androidx.constraintlayout.motion.widget.MotionLayout>